--- a/content/releases/devchangelog.adoc
+++ b/content/releases/devchangelog.adoc
@@ -19,6 +19,12 @@ Note: All dev releases are subject to breaking changes for new work since the pr
 
 == Release 1.12.0
 
+=== 1.12.0-alpha7 (Feb 8, 2024) [[v1.12.0-alpha7]]
+
+Reverted:
+
+* https://clojure.atlassian.net/browse/CLJ-2783[CLJ-2783] - replace calls to deprecated URL constructor
+
 === 1.12.0-alpha6 (Feb 8, 2024) [[v1.12.0-alpha6]]
 
 https://clojure.org/news/2024/02/08/1-12-alpha6[Release notes]
