--- a/content/releases/downloads_older.adoc
+++ b/content/releases/downloads_older.adoc
@@ -9,6 +9,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 == Older Clojure Releases
 
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.11.2/[Clojure 1.11.2] (Mar, 2024) - https://clojure.org/news/2024/03/08/clojure-1-11-2[release notes]
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.11.1/[Clojure 1.11.1] (Apr, 2022) - https://clojure.org/news/2022/04/05/clojure-1-11-1[release notes]
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.11.0/[Clojure 1.11.0] (Mar, 2022) - https://clojure.org/news/2022/03/22/clojure-1-11-0[release notes]
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.10.3/[Clojure 1.10.3] (Mar, 2021) - https://clojure.org/news/2021/03/04/clojure1-10-3[release notes]
