--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,12 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.11.1/CHANGELOG.md[repo changelog].
 
+=== 1.11.2.1446 (Mar 8, 2024) [[v1.11.2.1446]]
+
+* Update default Clojure version to 1.11.2
+* Clojure -X:deps programs that create a basis now take a :dir option for the directory context to use
+* Updated tools.deps, tools.deps.cli to latest
+
 === 1.11.1.1435 (Jan 3, 2024) [[v1.11.1.1435]]
 
 * https://clojure.atlassian.net/browse/TDEPS-238[TDEPS-238] - deps.edn files are now validated against specs
