--- a/content/reference/clojure_cli.adoc
+++ b/content/reference/clojure_cli.adoc
@@ -623,6 +623,13 @@ clj -X:deps tree
 
 Prints dependency tree with inclusion/exclusion information as determined during <<dep_expansion#_tree_printing,dependency expansion>>). Additional options can be used to select aliases or other classpath modifications, or to modify printing information.
 
+For example, the following can be used to print the deps tree for a `:test` alias:
+
+[source]
+---
+clj -X:deps tree :aliases '[:test]`
+---
+
 See https://clojure.github.io/tools.deps.cli/clojure.tools.deps.cli.api-api.html#clojure.tools.deps.cli.api/list[API docs].
 
 [[deps_aliases]]
