fix link formatting

--- a/content/news/2024/04/26/deref.adoc
+++ b/content/news/2024/04/26/deref.adoc
@@ -20,7 +20,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 == Blogs, articles, and projects
 
 * https://www.clojuriststogether.org/news/march-2024-short-term-project-updates/[March 2024 Short-Term Project Updates] - Kathy Davis (Clojurists Together)
-* https://blog.agical.se/en/posts/keeping-the--arglists-of-clojure-functions-dry/[Keeping the :arglists of Clojure functions DRY] - Peter Strömberg
+* link:++https://blog.agical.se/en/posts/keeping-the--arglists-of-clojure-functions-dry/++[Keeping the :arglists of Clojure functions DRY] - Peter Strömberg
 * https://blog.redplanetlabs.com/2024/04/25/better-performance-rama-vs-mongodb-and-cassandra/[2.5x better performance: Rama vs. MongoDB and Cassandra] - Nathan Marz (Red Planet Labs)
 
 == Libraries and Tools
