--- a/content/news/2024/04/28/clojure-1-12-alpha10.adoc
+++ b/content/news/2024/04/28/clojure-1-12-alpha10.adoc
@@ -3,7 +3,7 @@ Alex Miller
 2024-04-28
 :jbake-type: post
 
-Clojure 1.12.0-alpha10 is now available! Find download and usage information on the <<xref/../../releases/downloads#,Downloads>> page.
+Clojure 1.12.0-alpha10 is now available! Find download and usage information on the <<xref/../../../../../releases/downloads#,Downloads>> page.
 
 [[method_values]]
 == Method values
